components/ProjectContainer/projectContainer.module.css
.gridContainer {
  flex-flow: wrap;
  display: flex;
  margin-top: 5.5rem;
  padding-top: 3.5rem;
}

.gridItem {
  flex: 1 50%;
  padding: 30px 50px 60px;
  min-height: 500px;
  box-sizing: border-box;
  position: relative;
  overflow: hidden;
  flex-direction: column;
  justify-content: center;
  display: flex;
  text-align: center;
  /* text-decoration: none; */
  /* color: #fff; */
}

.sectionHeader {
  /* font-family: Inter,Source Sans Pro,Helvetica Neue,Arial,sans-serif; */
  font-size: 6.5rem;
  font-weight: 800;
  letter-spacing: -0.02em;
  text-align: left;
  z-index: 10;
  position: relative;
  line-height: 0em;
  pointer-events: none;
  flex: 1 100%;
  bottom: 12px;
}

.gridItemHeader {
  font-size: 46px;
  line-height: 1.3em;
  margin: 60px auto 0.65em;
  transition: transform 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
  transform: translateZ(0);
  font-weight: 800;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  max-width: 680px;
  z-index: 10;
  letter-spacing: -0.3px;
}

.gridItemText {
  margin: 0 auto 40px;
  width: 80%;
  z-index: 10;
  max-width: 500px;
  transition: transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.gridItemImage {
  margin: 0;
  width: 12em;
  z-index: 10;
  align-self: center;
  /* transition: transform 0.3s cubic-bezier(0.215, 0.61, 0.355, 1); */
}

.gridItem:hover .gridItemText {
  transform: translate3D(0, 8px, 0);
}

/* .gridItem:hover .gridItemImage {
  transform: translate3D(0, 10px, 0);
} */

.gridItem:hover .gridItemHeader {
  transform: translate3D(0, -6px, 0);
}

.grow {
  cursor: pointer;
  transition: transform 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.grow:hover {
  -webkit-transform: scale(1.03);
  -ms-transform: scale(1.03);
  transform: scale(1.03);
  z-index: 5;
}

.growButton {
  cursor: pointer;
  transition: transform 0.2s cubic-bezier(0.215, 0.61, 0.355, 1);
}

.growButton:hover {
  -webkit-transform: scale(1.3);
  -ms-transform: scale(1.3);
  transform: scale(1.3);
  z-index: 5;
}

/* .grow:after {
  z-index: 1;
  transition: 2s all;
} */

.grow:hover:after {
  /* z-index: 1; */
  /* transition-delay: 2s; */
}

/* Medium devices */
@media only screen and (max-width: 800px) {
  .gridItem {
    flex: 1 100%;
  }
  .hide {
    display: none;
  }
}

/* Small devices */
@media only screen and (max-width: 800px) {
  .gridContainer {
    margin-top: 3rem;
    padding-left: 0;
    padding-right: 0;
  }
  .gridItem {
    padding: 30px 0px 60px;
  }
}

/* XSmall devices */
@media only screen and (max-width: 800px) {
  .sectionHeader {
    font-size: 12vw;
  }
  .gridItemHeader {
    font-size: 8vw;
    max-width: 80%;
  }
}

